Adresse client + Nouveau nom : Booking Fakt

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Fakt",
-    "slug": "fakt",
+    "name": "BookingFakt",
+    "slug": "bookingfakt",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
