--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native": "^7.1.15",
     "@react-navigation/native-stack": "^7.3.22",
     "expo": "~54.0.0",
+    "expo-auth-session": "^7.0.8",
     "expo-clipboard": "~8.0.7",
+    "expo-crypto": "^15.0.7",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.14",
     "expo-font": "~14.0.8",
