--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.3",
+    "@react-native-community/cli": "^20.0.2",
     "@types/react": "~19.1.10",
     "typescript": "~5.9.2"
   },
