--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "BookingFakt",
+    "name": "Fakt",
     "slug": "fakt",
     "scheme": "fakt",
     "version": "1.0.0",
@@ -15,8 +15,8 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.tomburger.fakt",
-      "buildNumber": "2",
+      "bundleIdentifier": "com.tomburger.faktapp",
+      "buildNumber": "1",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
