--- a/ios/Fakt.xcodeproj/xcshareddata/xcschemes/Fakt.xcscheme
+++ b/ios/Fakt.xcodeproj/xcshareddata/xcschemes/Fakt.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "BookingFakt.app"
-               BlueprintName = "BookingFakt"
-               ReferencedContainer = "container:BookingFakt.xcodeproj">
+               BuildableName = "Fakt.app"
+               BlueprintName = "Fakt"
+               ReferencedContainer = "container:Fakt.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,15 +33,15 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "BookingFaktTests.xctest"
-               BlueprintName = "BookingFaktTests"
-               ReferencedContainer = "container:BookingFakt.xcodeproj">
+               BuildableName = "FaktTests.xctest"
+               BlueprintName = "FaktTests"
+               ReferencedContainer = "container:Fakt.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "BookingFakt.app"
-            BlueprintName = "BookingFakt"
-            ReferencedContainer = "container:BookingFakt.xcodeproj">
+            BuildableName = "Fakt.app"
+            BlueprintName = "Fakt"
+            ReferencedContainer = "container:Fakt.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "BookingFakt.app"
-            BlueprintName = "BookingFakt"
-            ReferencedContainer = "container:BookingFakt.xcodeproj">
+            BuildableName = "Fakt.app"
+            BlueprintName = "Fakt"
+            ReferencedContainer = "container:Fakt.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
