--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "bookingfakt",
   "version": "1.0.0",
   "main": "index.ts",
+  "homepage": "./",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "electron:dev": "concurrently \"cross-env BROWSER=none npm run web\" \"wait-on http://localhost:8081 && cross-env NODE_ENV=development electron electron.js\"",
+    "electron:build:web": "expo export:web",
+    "electron:build:windows": "npm run electron:build:web && electron-builder --windows",
+    "electron:build:mac": "npm run electron:build:web && electron-builder --mac",
+    "electron:build:linux": "npm run electron:build:web && electron-builder --linux",
+    "electron:build:all": "npm run electron:build:web && electron-builder -mwl"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
@@ -51,7 +58,46 @@
     "@expo/ngrok": "^4.1.3",
     "@react-native-community/cli": "^20.0.2",
     "@types/react": "~19.1.10",
-    "typescript": "~5.9.2"
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
+    "electron": "^39.0.0",
+    "electron-builder": "^26.0.12",
+    "typescript": "~5.9.2",
+    "wait-on": "^9.0.1"
   },
-  "private": true
+  "private": true,
+  "build": {
+    "appId": "com.fakt.app",
+    "productName": "FAKT",
+    "directories": {
+      "output": "dist",
+      "buildResources": "assets"
+    },
+    "files": [
+      "web-build/**/*",
+      "electron.js",
+      "preload.js",
+      "assets/**/*"
+    ],
+    "mac": {
+      "category": "public.app-category.business",
+      "target": ["dmg", "zip"],
+      "icon": "assets/icon.png"
+    },
+    "win": {
+      "target": ["nsis", "portable"],
+      "icon": "assets/icon.png"
+    },
+    "linux": {
+      "target": ["AppImage", "deb"],
+      "category": "Office",
+      "icon": "assets/icon.png"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    }
+  }
 }
