--- a/app.json
+++ b/app.json
@@ -39,9 +39,9 @@
     },
     "extra": {
       "eas": {
-        "projectId": "a027a1be-b999-49c1-a293-7b856e32b54f"
+        "projectId": "d3bf7ece-0e2a-48e9-894f-0f822c75a89f"
       }
     },
-    "owner": "jure1367"
+    "owner": "tommyburger4"
   }
 }
