--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "electron:dev": "concurrently \"cross-env BROWSER=none npm run web\" \"wait-on http://localhost:8081 && cross-env NODE_ENV=development electron electron.js\"",
     "electron:build:web": "expo export:web",
     "electron:build:windows": "npm run electron:build:web && electron-builder --windows",
@@ -23,6 +26,7 @@
     "@react-navigation/bottom-tabs": "^7.4.3",
     "@react-navigation/native": "^7.1.15",
     "@react-navigation/native-stack": "^7.3.22",
+    "@sentry/react-native": "~7.2.0",
     "expo": "^54.0.13",
     "expo-auth-session": "^7.0.8",
     "expo-clipboard": "~8.0.7",
@@ -37,7 +41,6 @@
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
-    "firebase-admin": "^13.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
@@ -51,17 +54,23 @@
     "react-native-web": "~0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.5.1",
-    "react-native-worklets-core": "^1.6.2"
+    "react-native-worklets-core": "^1.6.2",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.3",
     "@react-native-community/cli": "^20.0.2",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.10",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
+    "dotenv": "^17.2.3",
     "electron": "^39.0.0",
     "electron-builder": "^26.0.12",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.16",
     "typescript": "~5.9.2",
     "wait-on": "^9.0.1"
   },
